src/app/main/navbar/navbar.component.scss
@import "../../core/scss/fuse";

body {

    &.fuse-nav-bar-folded {

        .content-wrapper {

            &:last-child {
                padding-left: 64px !important;
            }

            &:first-child {
                padding-right: 64px !important;
            }
        }
    }
}

fuse-navbar {
    display: flex;
    flex-direction: column;
    width: 256px;
    min-width: 256px;
    max-width: 256px;
    background-color: #FFFFFF;
    overflow-y: auto;
    overflow-x: hidden;
    z-index: 3;
    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, .2), 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12);
    transition: all .3s cubic-bezier(.55, 0, .55, .2), width .1s linear, min-width .1s linear, max-width .1s linear;
    transform: translateX(0);

    &.folded {
        position: absolute;

        &.left-navbar {
            left: 0;
        }
        &.right-navbar {
            right: 0;
        }

        &:not(.folded-open) {
            width: 64px;
            min-width: 64px;
            max-width: 64px;

            .navbar-header {
                padding: 0 16px 0 16px;
            }
        }

        &.folded-open {

        }
    }

    &.close {
        &.left-navbar {
            transform: translateX(-100%) !important;
        }
        &.right-navbar {
            transform: translateX(100%) !important;
        }
        box-shadow: none;
    }

    @include media-breakpoint('xs') {
        position: absolute;
        top: 0;
        bottom: 0;
        &.left-navbar {
            left: 0;
        }
        &.right-navbar {
            right: 0;
        }

        &:not(.initialized) {
            &.left-navbar {
                transform: translateX(-100%);
            }
            &.right-navbar {
                transform: translateX(100%);
            }
        }
    }

    .navbar-header {
        padding: 0 16px 0 24px;
        display: flex;
        align-items: center;
        height: 64px;
        min-height: 64px;
        justify-content: space-between;
        transition: padding 200ms ease;
        background-color: rgba(255, 255, 255, .05);
        @include mat-elevation(1);

        .logo {
            display: flex;
            align-items: center;

            .logo-icon {
                display: block;
                background: #039BE5;
                width: 32px;
                min-width: 32px;
                height: 32px;
                line-height: 32px;
                text-align: center;
                font-size: 16px;
                font-weight: 500;
                color: #FFF;
                border-radius: 2px;
            }

            .logo-text {
                margin-left: 16px;
                font-size: 16px;
            }
        }
    }

    .nav-bar-content {
        flex: 1;
    }
}

